// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-row t-row--center t-row--top"
    style="margin-left: 0px; margin-right: 0px;"
  >
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      type="button"
    >
      <span
        class="t-button__text"
      >
        新手引导
      </span>
    </button>
    <div>
      <div
        class="t-drawer t-drawer--right t-drawer--without-mask"
        tabindex="-1"
      >
        <div
          class="t-drawer__content-wrapper t-drawer__content-wrapper--right"
          style="width: 60%;"
        >
          <div
            class="t-drawer__close-btn"
          >
            <svg
              class="t-icon t-icon-close"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
          <div
            class="t-drawer__header"
          >
            演示新手引导
          </div>
          <div
            class="t-drawer__body"
          >
            <div
              class="guide-container"
            >
              <div
                class="main-title-base"
              >
                <div
                  class="title-major"
                >
                  Guide 用户引导
                </div>
                <div
                  class="title-sub"
                >
                  按钮用于开启一个闭环的操作任务，如“删除”对象、“购买”商品等。
                </div>
              </div>
              <div
                class="field label-field-base"
              >
                <div
                  class="label"
                >
                  Label
                </div>
                <div
                  class="t-input__wrap"
                >
                  <div
                    class="t-input t-size-m t-align-left t-is-default"
                  >
                    <input
                      class="t-input__inner"
                      placeholder="请输入内容"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div
                class="field"
              >
                <div
                  class="label"
                >
                  Label
                </div>
                <div
                  class="t-input__wrap"
                >
                  <div
                    class="t-input t-size-m t-align-left t-is-default"
                  >
                    <input
                      class="t-input__inner"
                      placeholder="请输入内容"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div
                class="t-row action-base t-row--start t-row--top"
                style="margin-left: 0px; margin-right: 0px;"
              >
                <button
                  class="t-button t-button--theme-primary t-button--variant-base"
                  type="button"
                >
                  <span
                    class="t-button__text"
                  >
                    确定
                  </span>
                </button>
                <button
                  class="t-button t-button--theme-default t-button--variant-base"
                  type="button"
                >
                  <span
                    class="t-button__text"
                  >
                    取消
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="t-drawer__footer"
          >
            <button
              class="t-button t-button--theme-primary t-button--variant-base"
              type="button"
            >
              <span
                class="t-button__text"
              >
                 关闭抽屉 
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`custom-popup.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-row t-row--center t-row--top"
    style="margin-left: 0px; margin-right: 0px;"
  >
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      type="button"
    >
      <span
        class="t-button__text"
      >
        新手引导
      </span>
    </button>
    <div>
      <div
        class="t-drawer t-drawer--right t-drawer--without-mask"
        tabindex="-1"
      >
        <div
          class="t-drawer__content-wrapper t-drawer__content-wrapper--right"
          style="width: 60%;"
        >
          <div
            class="t-drawer__close-btn"
          >
            <svg
              class="t-icon t-icon-close"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
          <div
            class="t-drawer__header"
          >
            演示新手引导
          </div>
          <div
            class="t-drawer__body"
          >
            <div
              class="guide-container"
            >
              <div
                class="main-title-custom-popup"
              >
                <div
                  class="title-major"
                >
                  Guide 用户引导
                </div>
                <div
                  class="title-sub"
                >
                  按钮用于开启一个闭环的操作任务，如“删除”对象、“购买”商品等。
                </div>
              </div>
              <div
                class="field label-field-1-custom-popup"
              >
                <div
                  class="label"
                >
                  Label
                </div>
                <div
                  class="t-input__wrap"
                >
                  <div
                    class="t-input t-size-m t-align-left t-is-default"
                  >
                    <input
                      class="t-input__inner"
                      placeholder="请输入内容"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div
                class="field label-field-2-custom-popup"
              >
                <div
                  class="label"
                >
                  Label
                </div>
                <div
                  class="t-input__wrap"
                >
                  <div
                    class="t-input t-size-m t-align-left t-is-default"
                  >
                    <input
                      class="t-input__inner"
                      placeholder="请输入内容"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div
                class="t-row action t-row--start t-row--top"
                style="margin-left: 0px; margin-right: 0px;"
              >
                <button
                  class="t-button t-button--theme-primary t-button--variant-base"
                  type="button"
                >
                  <span
                    class="t-button__text"
                  >
                    确定
                  </span>
                </button>
                <button
                  class="t-button t-button--theme-default t-button--variant-base"
                  type="button"
                >
                  <span
                    class="t-button__text"
                  >
                    取消
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="t-drawer__footer"
          >
            <button
              class="t-button t-button--theme-primary t-button--variant-base"
              type="button"
            >
              <span
                class="t-button__text"
              >
                 关闭抽屉 
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`dialog.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-row t-row--center t-row--top"
    style="margin-left: 0px; margin-right: 0px;"
  >
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      type="button"
    >
      <span
        class="t-button__text"
      >
        新手引导
      </span>
    </button>
    <div>
      <div
        class="t-drawer t-drawer--right t-drawer--without-mask"
        tabindex="-1"
      >
        <div
          class="t-drawer__content-wrapper t-drawer__content-wrapper--right"
          style="width: 60%;"
        >
          <div
            class="t-drawer__close-btn"
          >
            <svg
              class="t-icon t-icon-close"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
          <div
            class="t-drawer__header"
          >
            演示新手引导
          </div>
          <div
            class="t-drawer__body"
          >
            <div
              class="guide-container"
            >
              <div
                class="main-title-dialog"
              >
                <div
                  class="title-major"
                >
                  Guide 用户引导
                </div>
                <div
                  class="title-sub"
                >
                  按钮用于开启一个闭环的操作任务，如“删除”对象、“购买”商品等。
                </div>
              </div>
              <div
                class="field label-field-dialog"
              >
                <div
                  class="label"
                >
                  Label
                </div>
                <div
                  class="t-input__wrap"
                >
                  <div
                    class="t-input t-size-m t-align-left t-is-default"
                  >
                    <input
                      class="t-input__inner"
                      placeholder="请输入内容"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div
                class="field"
              >
                <div
                  class="label"
                >
                  Label
                </div>
                <div
                  class="t-input__wrap"
                >
                  <div
                    class="t-input t-size-m t-align-left t-is-default"
                  >
                    <input
                      class="t-input__inner"
                      placeholder="请输入内容"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div
                class="t-row action-dialog t-row--start t-row--top"
                style="margin-left: 0px; margin-right: 0px;"
              >
                <button
                  class="t-button t-button--theme-primary t-button--variant-base"
                  type="button"
                >
                  <span
                    class="t-button__text"
                  >
                    确定
                  </span>
                </button>
                <button
                  class="t-button t-button--theme-default t-button--variant-base"
                  type="button"
                >
                  <span
                    class="t-button__text"
                  >
                    取消
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="t-drawer__footer"
          >
            <button
              class="t-button t-button--theme-primary t-button--variant-base"
              type="button"
            >
              <span
                class="t-button__text"
              >
                 关闭抽屉 
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`dialog-body.jsx 1`] = `
<DocumentFragment>
  <div
    class="dialog-body"
  >
    <img
      alt="demo"
      class="dialog-img"
      src="https://tdesign.gtimg.com/demo/demo-image-1.png"
    />
    <p>
      此处显示本页引导的说明文案，可按需要撰写，如内容过多可折行显示。图文也可按需自由设计。
    </p>
  </div>
</DocumentFragment>
`;

exports[`my-popup.jsx 1`] = `
<DocumentFragment>
  <div
    class="my-popup"
  >
    <svg
      class="t-icon t-icon-arrow-up pop-icon"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M7.5 3.91L3.85 7.56l-.7-.7L7.79 2.2a.3.3 0 01.42 0l4.64 4.64-.7.71L8.5 3.91V14h-1V3.91z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    <p
      class="popup-desc"
    >
      自定义的图形或说明文案，用来解释或指导该功能使用。
    </p>
    <div
      class="popup-action"
    >
      <button
        class="t-button t-button--theme-default t-button--variant-base t-size-s"
        type="button"
      >
        <span
          class="t-button__text"
        >
          跳过
        </span>
      </button>
      <button
        class="t-button t-button--theme-default t-button--variant-base t-size-s"
        type="button"
      >
        <span
          class="t-button__text"
        >
          上一步
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`no-mask.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-row t-row--center t-row--top"
    style="margin-left: 0px; margin-right: 0px;"
  >
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      type="button"
    >
      <span
        class="t-button__text"
      >
        新手引导
      </span>
    </button>
    <div>
      <div
        class="t-drawer t-drawer--right t-drawer--without-mask"
        tabindex="-1"
      >
        <div
          class="t-drawer__content-wrapper t-drawer__content-wrapper--right"
          style="width: 60%;"
        >
          <div
            class="t-drawer__close-btn"
          >
            <svg
              class="t-icon t-icon-close"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
          <div
            class="t-drawer__header"
          >
            演示新手引导
          </div>
          <div
            class="t-drawer__body"
          >
            <div
              class="guide-container"
            >
              <div
                class="main-title-no-mask"
              >
                <div
                  class="title-major"
                >
                  Guide 用户引导
                </div>
                <div
                  class="title-sub"
                >
                  按钮用于开启一个闭环的操作任务，如“删除”对象、“购买”商品等。
                </div>
              </div>
              <div
                class="field label-field-no-mask"
              >
                <div
                  class="label"
                >
                  Label
                </div>
                <div
                  class="t-input__wrap"
                >
                  <div
                    class="t-input t-size-m t-align-left t-is-default"
                  >
                    <input
                      class="t-input__inner"
                      placeholder="请输入内容"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div
                class="field"
              >
                <div
                  class="label"
                >
                  Label
                </div>
                <div
                  class="t-input__wrap"
                >
                  <div
                    class="t-input t-size-m t-align-left t-is-default"
                  >
                    <input
                      class="t-input__inner"
                      placeholder="请输入内容"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div
                class="t-row action-no-mask t-row--start t-row--top"
                style="margin-left: 0px; margin-right: 0px;"
              >
                <button
                  class="t-button t-button--theme-primary t-button--variant-base"
                  type="button"
                >
                  <span
                    class="t-button__text"
                  >
                    确定
                  </span>
                </button>
                <button
                  class="t-button t-button--theme-default t-button--variant-base"
                  type="button"
                >
                  <span
                    class="t-button__text"
                  >
                    取消
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="t-drawer__footer"
          >
            <button
              class="t-button t-button--theme-primary t-button--variant-base"
              type="button"
            >
              <span
                class="t-button__text"
              >
                 关闭抽屉 
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`popup-dialog.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-row t-row--center t-row--top"
    style="margin-left: 0px; margin-right: 0px;"
  >
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      type="button"
    >
      <span
        class="t-button__text"
      >
        新手引导
      </span>
    </button>
    <div>
      <div
        class="t-drawer t-drawer--right t-drawer--without-mask"
        tabindex="-1"
      >
        <div
          class="t-drawer__content-wrapper t-drawer__content-wrapper--right"
          style="width: 60%;"
        >
          <div
            class="t-drawer__close-btn"
          >
            <svg
              class="t-icon t-icon-close"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
          <div
            class="t-drawer__header"
          >
            演示新手引导
          </div>
          <div
            class="t-drawer__body"
          >
            <div
              class="guide-container"
            >
              <div
                class="main-title-popup-dialog"
              >
                <div
                  class="title-major"
                >
                  Guide 用户引导
                </div>
                <div
                  class="title-sub"
                >
                  按钮用于开启一个闭环的操作任务，如“删除”对象、“购买”商品等。
                </div>
              </div>
              <div
                class="field label-field-popup-dialog"
              >
                <div
                  class="label"
                >
                  Label
                </div>
                <div
                  class="t-input__wrap"
                >
                  <div
                    class="t-input t-size-m t-align-left t-is-default"
                  >
                    <input
                      class="t-input__inner"
                      placeholder="请输入内容"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div
                class="field"
              >
                <div
                  class="label"
                >
                  Label
                </div>
                <div
                  class="t-input__wrap"
                >
                  <div
                    class="t-input t-size-m t-align-left t-is-default"
                  >
                    <input
                      class="t-input__inner"
                      placeholder="请输入内容"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div
                class="t-row action-popup-dialog t-row--start t-row--top"
                style="margin-left: 0px; margin-right: 0px;"
              >
                <button
                  class="t-button t-button--theme-primary t-button--variant-base"
                  type="button"
                >
                  <span
                    class="t-button__text"
                  >
                    确定
                  </span>
                </button>
                <button
                  class="t-button t-button--theme-default t-button--variant-base"
                  type="button"
                >
                  <span
                    class="t-button__text"
                  >
                    取消
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="t-drawer__footer"
          >
            <button
              class="t-button t-button--theme-primary t-button--variant-base"
              type="button"
            >
              <span
                class="t-button__text"
              >
                 关闭抽屉 
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
